--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,6 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-</head>
 
 <body>
     <div class="container-fluid">
@@ -38,13 +37,13 @@
                                         {{ .Rating }}
                                     </td>
                                     <td>
-                                        {{ range .Torrents}}
+                                        {{ range .Torrents }}
 
                                         <button class="btn btn-success download" data-torrent="{{ .Url}}">{{ .Quality }}</button>
-                                        {{end}}
+                                        {{ end }}
                                     </td>
                                 </tr>
-                                {{end}}
+                                {{ end }}
                             </tbody>
                         </table>
                     </div>
@@ -53,3 +52,4 @@
         </div>
     </div>
 </body>
+<script src="/static/main.js"></script>
