--- a/templates/main.html
+++ b/templates/main.html
@@ -3,70 +3,121 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="/static/main.js"></script>
+</head>
+
+<!-- https://getbootstrap.com/docs/5.0/components/navs-tabs/ -->
 
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="table-responsive">
-                <div class="table-wrapper-scroll-y">
-                    <div class="table-title">
-                        <div class="row">
-                            <div class="col-sm-9">
-                                <h3>Movies</h3>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#movies" type="button" role="tab" aria-controls="home" aria-selected="true">Movies</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#shows" type="button" role="tab" aria-controls="profile" aria-selected="false">Shows</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="Content">
+            <div class="tab-pane fade show active" id="movies" role="tabpanel">
+                <div class="row">
+                    <div class="table-responsive">
+                        <div class="table-wrapper-scroll-y">
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-sm-9">
+                                        <h3>Movies</h3>
+                                    </div>
+                                </div>
+                                <table id="moviesTable" class="table table-striped table-hover table-sm">
+                                    <thead>
+                                        <tr>
+                                            <th>Title</th>
+                                            <th>Year</th>
+                                            <th>Rating</th>
+                                            <th>Add to Seedr</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {{ range .Movies }}
+                                        <tr>
+                                            <td>
+                                                {{ .Title }}
+                                            </td>
+                                            <td>
+                                                {{ .Year }}
+                                            </td>
+                                            <td>
+                                                {{ .Rating }}
+                                            </td>
+                                            <td>
+                                                <table class="table table-striped table-hover table-sm">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Quality</th>
+                                                            <th>Seeders</th>
+                                                            <th>Leechers</th>
+                                                            <th>Upload Date</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+
+                                                        {{ range .Torrents }}
+                                                        <tr>
+                                                            <td><button class="btn btn-success download" data-torrent="{{ .Url}}">{{ .Quality }}</button></td>
+                                                            <td>{{ .Seeds }}</td>
+                                                            <td>{{ .Peers }}</td>
+                                                            <td>{{ .Date_uploaded }}</td>
+                                                        </tr>
+                                                        {{ end }}
+                                                    </tbody>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        {{ end }}
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
-                        <table id="moviesTable" class="table table-striped table-hover table-sm">
-                            <thead>
-                                <tr>
-                                    <th>Title</th>
-                                    <th>Year</th>
-                                    <th>Rating</th>
-                                    <th>Add to Seedr</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    {{ range .Movies }}
-                                    <td>
-                                        {{ .Title }}
-                                    </td>
-                                    <td>
-                                        {{ .Year }}
-                                    </td>
-                                    <td>
-                                        {{ .Rating }}
-                                    </td>
-                                    <td>
-                                        <table class="table table-striped table-hover table-sm">
-                                            <thead>
-                                                <tr>
-                                                    <th>Quality</th>
-                                                    <th>Seeders</th>
-                                                    <th>Leechers</th>
-                                                    <th>Upload Date</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="shows">
+                <div class="row">
+                    <div class="table-responsive">
+                        <div class="table-wrapper-scroll-y">
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-sm-9">
+                                        <h3>Shows</h3>
+                                    </div>
+                                    <table id="showsTable" class="table table-striped table-hover table-sm">
+                                        <thead>
+                                            <tr>
+                                                <th>Title</th>
+                                                <th>Date</th>
+                                                <!-- <th>Rating</th> -->
+                                                <th>Add to Seedr</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {{ range $index, $show := .Shows }}
+                                            <tr>
+                                                <td>{{ $show.Title }}</td>
+                                                <td>{{ $show.PubDate }}</td>
+                                                <td><button class="btn btn-success download-magnet" data-torrent="{{ $show.Link }}">Add</button></td>
+                                            </tr>
+                                            {{ end }}
 
-                                                {{ range .Torrents }}
-                                                <tr>
-                                                    <td><button class="btn btn-success download" data-torrent="{{ .Url}}">{{ .Quality }}</button></td>
-                                                    <td>{{ .Seeds }}</td>
-                                                    <td>{{ .Peers }}</td>
-                                                    <td>{{ .Date_uploaded }}</td>
-                                                </tr>
-                                                {{ end }}
-                                            </tbody>
-                                        </table>
-                                    </td>
-                                </tr>
-                                {{ end }}
-                            </tbody>
-                        </table>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="/static/main.js"></script>
