--- a/templates/main.html
+++ b/templates/main.html
@@ -95,17 +95,20 @@
                                     <table id="showsTable" class="table table-striped table-hover table-sm">
                                         <thead>
                                             <tr>
+                                                <th>Show</th>
                                                 <th>Title</th>
                                                 <th>Date</th>
-                                                <!-- <th>Rating</th> -->
+                                                <th>Description</th>
                                                 <th>Add to Seedr</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             {{ range $index, $show := .Shows }}
                                             <tr>
+                                                <td><b>{{ $show.TVShowName }}</b></td>
                                                 <td>{{ $show.Title }}</td>
                                                 <td>{{ $show.PubDate }}</td>
+                                                <td>{{ $show.Description }}</td>
                                                 <td><button class="btn btn-success download-magnet" data-torrent="{{ $show.Link }}">Add</button></td>
                                             </tr>
                                             {{ end }}
